--- a/kele_z13.css
+++ b/kele_z13.css
@@ -2,11 +2,11 @@ body
 {
 
  color: blue;
- font-size: 30px;
+ font-size: 47mm;
 }
 p
 {
 	color: green;
-	font-size: 20px;
+	font-size: 37mm;
 }
  /*Kasia Keler 24.04.2023*/
