--- a/kele_z15.css
+++ b/kele_z15.css
@@ -1,12 +1,12 @@
 body
 {
 
- color: blue;
+ color: rgb(53%,36%,82%);
  font-size: 30px;
 }
 p
 {
-	color: green;
+	color: #6CA15C;
 	font-size: 20px;
 }
  /*Kasia Keler 24.04.2023*/
